2005-02-06  Ross Golder  <ross@golder.org>

	* archive.pl: Added 'start-time' and 'end-time' options.
